細かい修正
- 結果をhtmlに出力するようにした
- プロフ画像のURIもデータとして保持するようにした

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>分析したい友だちのデータリストをここに貼る</h2>
     <textarea id="friends-data" style="width: 100%; height:400px;"></textarea>
     <button id="eval">実行する</button>
+    <div id="result"></div>
     <!-- JavaScript Files-->
     <script src="js/jquery-1.9.1.js"></script>
     <script src="js/clusters.js"></script>
