metaタグのdescriptionを変更

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>お前ら、友だちになれると思うよ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="saxsir">
-    <meta name="description" content="クラスタリングを用いて友だちになれる可能性の高い友人同士を見つけるサービス">
+    <meta name="description" content="友だちになれる可能性の高い友人同士を見つけるサービス">
 
     <!-- Loading Bootstrap -->
     <link href="lib/flat-ui/bootstrap/css/bootstrap.css" rel="stylesheet">
