ygcbf.jsを書きなおした
- いらない関数を削った
- 分かりやすくした
- UIを改良した

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <h2 class="demo-panel-title">結果</h2>
       <div class="row-demo-row">
         <div class="span12" id="result">
-
+        </div>
+        <div class="span12">
+          <canvas id="myChart" width="600" height="600"></canvas>
         </div>
       </div>
     </div>
@@ -72,6 +74,9 @@
     <script src="lib/flat-ui/js/jquery.stacktable.js"></script>
     <script src="http://vjs.zencdn.net/c/video.js"></script>
     <script src="lib/flat-ui/js/application.js"></script>
+
+    <!-- Chart.js -->
+    <script src="lib/Chart.js/Chart.js"></script>
 
     <!-- JavaScript Files -->
     <script src="js/clusters.js"></script>
